dry_run_test_v2.log
  File "D:\Subscribtions Sellers\check_availability.py", line 49
    'Accept-Language': 'en-US,en;qdef get_price_z2u(soup, content=None):
                       ^
SyntaxError: unterminated string literal (detected at line 49)
